--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,15 +28,6 @@
 
 
 body{
-font-family: "The Girl Next Door";
-
-	font-size: 14px;
-	font-style: large;
-	font-variant: normal;
-	font-weight: bold;
-	line-height: 15.4px;
-	text-align: center;
-	font-size: 200%;
 
 	background-image: url("https://testdrive-archive.azurewebsites.net/performance/chalkboard/Images/EmptyChalkboard.svg");
 	padding: 100px;
@@ -45,7 +36,9 @@ font-family: "The Girl Next Door";
     background-repeat:no-repeat;
     background-size: 75%, 75%;
 
+
 }
+
 
 th, td {
     padding: 5px;
@@ -73,12 +66,12 @@ list-style-position: inside;
 
 }
 form{
-width:100%;
+font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
 }
 
 </style>
 </head>
-<body ng-controller="SampleController">
+<body ng-controller="SampleController" class="nice">
 {{! changing the mustache delimiter so it doesn't conflict with }}
 {{! the default angularjs delimeters - https://mustache.github.io/mustache.5.html for more info }}
 {{=<% %>=}}
@@ -176,7 +169,6 @@ width:100%;
     <!-- Modal -->
                         <div class="modal fade" id="myModal" role="dialog">
                             <div class="modal-dialog">
->>>>>>> baae31ee7f7ea8b9bb5c06ac6f8548641f946fb4
 
                                 <!-- Modal content-->
                                 <div class="modal-content">
@@ -184,8 +176,8 @@ width:100%;
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                         <h4 class="modal-title">Register</h4>
                                     </div>
-                                    <div class="modal-body">
-                                        <div>
+                                    <div class="modal-body notnice">
+                                        <div class="notnice">
 
 
                                             <input type="text" class="form-control" id="first" placeholder="Enter Your First Name" ng-model="registerFirstName"/>
@@ -422,7 +414,9 @@ width:100%;
             <ol class="f">
                 <span ng-repeat="course in allCourses">
                     <li>{{course.name}}, Subject: {{course.subject}}, Grade Level: {{course.gradeLevel}}
-                        <input type="button" class="btn btn-default btn-lg" ng-click="gradebook(course.id)" value="Gradebook"/> </li>
+                        <input type="button" class="btn btn-default btn-lg" ng-click="gradebook(course.id)" value="Gradebook"/>
+                        <input type="button" class="btn btn-default btn-lg" ng-click="graph(course.id)" value="Graph"/>
+                    </li>
                 </span>
             </ol>
                 </font>
