Ordering by date now working

--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -193,7 +193,7 @@ border-collapse: separate;
                 </tr>
                 <tr>
                     <td></td>
-                    <td ng-repeat="currentAssignment in allAssignments"> {{currentAssignment.name}} </td>
+                    <td ng-repeat="currentAssignment in allAssignments"> {{currentAssignment.name}} {{currentAssignment.dueDate}} </td>
                 </tr>
 
 
