--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -154,6 +154,8 @@ border-collapse: separate;
 
             <h3 id="class-header"> {{currentClass.name}} Gradebook </h3>
 
+<button ng-click="ngBack()">Go Back</button>
+
 <div class="container">
             <table class="table table-bordered">
                 <tr>
@@ -244,7 +246,7 @@ border-collapse: separate;
                 <!--</tr>-->
 
                 <tr ng-repeat="studentContainer in gradebookContainer.studentContainers">
-                    <td>{{ studentContainer.student.firstName }} {{ studentContainer.student.lastName }} | <span style="color: gray"> Average: {{ studentContainer.average }} </span> <input type="button" ng-click="sendEmailOneStudent(studentContainer)" value="Email"/></td>
+                    <td>{{ studentContainer.student.firstName }} {{ studentContainer.student.lastName }} | <span style="color: gray"> Average: {{ studentContainer.average }} </span> <input type="button" class="btn btn-default btn-sm" ng-click="sendEmailOneStudent(studentContainer)" value="Email"/></td>
 
                     <td ng-repeat="studentAssignment in studentContainer.studentAssignments"> <input type="number" ng-model="studentAssignment.grade" ng-keyup="storeGrades"> </td>
                 </tr>
@@ -285,6 +287,7 @@ border-collapse: separate;
                             </div>
 
                         </div>
+                        <input type="button" class="btn btn-default btn-md" ng-click="sendEmailForAllZeros()" value="Email all with missing assignments"/>
 
                     </td>
 
@@ -329,11 +332,11 @@ border-collapse: separate;
                 </tr>
 
                 <tr>
-                    <td> <d>
+                    <td>
 
                     <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <input type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(allAssignments[$index])" value="Revert to original grades (coming soon)"/> </td>
                 </tr>
-                <tr>
+
                     <!--<td>-->
                         <!--<button name="but" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Add Assignment</button>-->
 
@@ -377,14 +380,14 @@ border-collapse: separate;
 
 
                     <!--</td>-->
-                </tr>
+
 
             </table>
 </div>
 
 <br/><br/>
 
-<input type="button" ng-click="sendEmailForAllZeros()" value="Email all with missing assignments"/>
+
 
 <!--<div class="container" id="assignment" >-->
     <!--<h2></h2>-->
