--- a/src/main/resources/templates/graph.html
+++ b/src/main/resources/templates/graph.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
-    <script>
-        var myChart = new Chart({...})
-    </script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>-->
+
+    <!--<script src="node_modules/chart.js/Chart.min.js"></script>-->
+    <!--<script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>-->
+
     <meta charset="UTF-8">
 
 
@@ -17,6 +18,9 @@
 
 </head>
 <body ng-controller="GraphController">
+
+<canvas class="chart chart-line" chart-data="data" chart-labels="labels"
+        chart-series="series" chart-click="onClick"> </canvas>
 {{! changing the mustache delimiter so it doesn't conflict with }}
 {{! the default angularjs delimeters - https://mustache.github.io/mustache.5.html for more info }}
 {{=<% %>=}}
@@ -28,46 +32,6 @@
 <h3 id="class-header"> {{currentClass.name}} Graph </h3>
 
 
-<canvas id="myChart" width="400" height="400"></canvas>
-<script>
-var ctx = document.getElementById("myChart");
-var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [{
-            label: '# of Votes',
-            data: [12, 19, 3, 5, 2, 3],
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255,99,132,1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
-                }
-            }]
-        }
-    }
-});
-</script>
 
 
 
@@ -81,6 +45,11 @@ var myChart = new Chart(ctx, {
 
 
 </body>
+<!--&lt;!&ndash;<script src="node_modules/angular/angular.min.js"></script>&ndash;&gt;-->
+<!--<script src="node_modules/chart.js/Chart.min.js"></script>-->
+<!--<script src="//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>-->
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js" integrity="sha256-LyocQFwqh0JslfDVDlJqJamo/nJP/5rAQdYtCAtB4hU=" crossorigin="anonymous"></script>
+<script src ="//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 <script src="js/graph-ng-controller.js"></script>
 </html>
