Formatting dates on front end and in email

--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -196,7 +196,7 @@ border-collapse: separate;
                 </tr>
                 <tr>
                     <td></td>
-                    <td ng-repeat="currentAssignment in allAssignments"> {{currentAssignment.name}} {{currentAssignment.dueDate}} </td>
+                    <td ng-repeat="currentAssignment in allAssignments"> {{currentAssignment.name}}, due {{currentAssignment.dueDate}} </td>
                 </tr>
 
 
